# screencloud

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CNAME  LICENSE  README.md  index.html  robots.txt
.github/workflows/: build.yaml  stale.yaml
.snapcraft/: ci_snapcraft.cfg
1.0/oauth/: access_token_xauth.xml
1.0/screenshots/: upload.xml
1.0/updates/: changelog  check_version.xml
1.0/users/: register.xml
ScreenCloudHelper/: CMakeLists.txt  icons_mac.icns
ScreenCloudHelper/ScreenCloudHelper/: AppDelegate.h  AppDelegate.m  ScreenCloudHelper-Info.plist  ScreenCloudHelper-Prefix.pch  main.m
ScreenCloudHelper/ScreenCloudHelper.xcodeproj/: project.pbxproj
ScreenCloudHelper/ScreenCloudHelper.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ScreenCloudHelper/ScreenCloudHelper/en.lproj/: MainMenu.xib
cmake/modules/: FindPythonQt.cmake  FindPythonQt_QtAll.cmake  FindQtMobility.cmake  FindQuaZip.cmake
css/: responsive.css  screencloud.css
css/less/: bootstrap.less  buttons.less  responsive-767px-max.less  responsive-768px-979px.less  responsive-980px-1199px.less  responsive.less  screencloud.less  variables.less
deploy/: PKGBUILD  _service  debian-xUbuntu_14.10.control  debian.changelog  debian.control  debian.rules  debian.screencloud.links  screencloud-xUbuntu_14.10.dsc  screencloud.dsc  screencloud.install  screencloud.spec  snapcraft.yaml
js/: main.js  plugins.js
pages/: download.html
res/: Info.plist.in  icons.qrc  resource.h  resources_linux.qrc  resources_win.qrc  screencloud.desktop  screencloud.rc  screencloud.sh  sounds.qrc
screencloud/: CMakeLists.txt
screencloud/cmake/: cmake_uninstall.cmake.in
screencloud/cmake/modules/: FindLibSSH2.cmake  FindLibraryWithDebug.cmake  FindPythonQt.cmake  FindPythonQt_QtAll.cmake  FindQCA2.cmake  FindQSingleApplication.cmake  FindQtLua.cmake  FindQtOAuth.cmake  FindQuaZip.cmake  FindQxt.cmake
screencloud/res/: Info.plist  icons.qrc  qt.conf  resources_linux.qrc  resources_mac.qrc  resources_win.qrc  screencloud.desktop  screencloud.rc
screencloud/res/doc/: copyright
screencloud/res/forms/: settings-defaultUploader.ui  settings-ftp.ui  settings-saveToFile.ui  settings-screencloud.ui  settings-sftp.ui
screencloud/res/images/icons/: icons_mac.icns
screencloud/res/modules/: ScreenCloud.py
screencloud/src/: Entitlements.plist  audionotifier.cpp  audionotifier.h  datetimedialog.cpp  datetimedialog.h  datetimedialog.ui  downloadupdatedialog.cpp  downloadupdatedialog.h  downloadupdatedialog.ui  hotkeyeventfilter.cpp  hotkeyeventfilter.h  licensesdialog.cpp  licensesdialog.ui  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  overlayitem.cpp  overlayitem.h  plugindialog.cpp  plugindialog.h  plugindialog.ui  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  savescreenshotdialog.cpp  savescreenshotdialog.h  savescreenshotdialog.ui  screenshooter.cpp  screenshooter.h  screenshotthumbview.cpp  screenshotthumbview.h  selectionoverlay.cpp  selectionoverlay.h  systemtrayicon.cpp  systemtrayicon.h  transparentrubberband.cpp  transparentrubberband.h  uploadmanager.cpp  uploadmanager.h
screencloud/src/delegates/: pushbuttondelegate.cpp  pushbuttondelegate.h
screencloud/src/dialog/: changelogdialog.cpp  changelogdialog.h  changelogdialog.ui  downloadupdatedialog.cpp  downloadupdatedialog.h  downloadupdatedialog.ui  editordialog.cpp  editordialog.h  editordialog.ui  licensesdialog.h  licensesdialog.ui  logindialog.cpp  logindialog.h  logindialog.ui  plugindialog.cpp  plugindialog.h  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  savescreenshotdialog.cpp  savescreenshotdialog.h
screencloud/src/editor/: colorpropertytooleditor.cpp  fontpropertytooleditor.cpp  fontpropertytooleditor.h  graphicsitemfactory.cpp  graphicsitemfactory.h  kaptiongraphicstoolkit.cpp  kaptiongraphicstoolkit.h  numberpropertytooleditor.cpp  numberselector.cpp  numberselector.h  propertytooleditor.h  qcolorbutton.cpp  qcolorbutton.h  scale.h  scalepropertytooleditor.cpp  snapshotcanvas.cpp  snapshotcanvas.h
screencloud/src/editor/items/: abstractgraphicsrectitem.cpp  arrowgraphicsitem.h  kaptiongraphicsitem.h  numbereditem.h  textgraphicsitem.cpp
screencloud/src/firstrunwizard/: activatepage.cpp  activatepage.h  finishedpage.cpp  finishedpage.h  firstrunwizard.cpp  firstrunwizard.h  intropage.cpp  intropage.h  loginpage.cpp  loginpage.h  newaccountpage.cpp  newaccountpage.h  onlineservicespage.h  shortcutspage.cpp  shortcutspage.h  tutorialpage1.cpp  tutorialpage1.h  welcomepage.cpp  welcomepage.h
screencloud/src/gui-elements/: busyoverlay.cpp  busyoverlay.h  clickablelabel.cpp  clickablelabel.h  pythonconsole.h  screenshotthumbview.cpp  screenshotthumbview.h  selectionoverlay.cpp  selectionoverlay.h
screencloud/src/models/: activeuploaderslistmodel.cpp  activeuploaderslistmodel.h  availableuploaderslistmodel.cpp  availableuploaderslistmodel.h  pluginslistmodel.cpp  pluginslistmodel.h  uploaderslistmodel.cpp  uploaderslistmodel.h
screencloud/src/plugin/: plugininstaller.cpp  plugininstaller.h  pluginloader.cpp  pluginloader.h  pluginmanager.cpp  pluginmanager.h
screencloud/src/uploaders/: clipboarduploader.cpp  clipboarduploader.h  fileuploader.cpp  fileuploader.h  ftpuploader.cpp  ftpuploader.h  pythonuploader.cpp  pythonuploader.h  screenclouduploader.cpp  screenclouduploader.h  scripteduploader.cpp  scripteduploader.h  sftpuploader.cpp  sftpuploader.h  uploader.cpp  uploader.h
screencloud/src/utils/: OS.h  arch.h  globalshortcut.cpp  globalshortcut.h  globalshortcut_win.cpp  log.h  luastate.cpp  luastate.h  network.cpp  network.h  security.cpp  security.h  startup.cpp  startup.h  startup_mac.mm  updater.cpp  updater.h  windowsystem.h  windowsystem_mac.cpp  windowsystem_win.cpp  windowsystem_x11.cpp
src/: audionotifier.cpp  audionotifier.h  hotkeyeventfilter.cpp  hotkeyeventfilter.h  main.cpp  screenshooter.cpp  screenshooter.h  systemtrayicon.cpp  systemtrayicon.h  uploadmanager.cpp  uploadmanager.h
tools/: qt-installer-windows.qs  travis-install-qt-windows.sh
(+133 files in other folders)
